--- a/.github/workflows/first.yaml
+++ b/.github/workflows/first.yaml
@@ -1,5 +1,5 @@
 name: first
-on:  push
+on: push
 jobs:
     jop1:
         name: First job
@@ -8,14 +8,14 @@ jobs:
         - name: Step one
           uses: actions/checkout@v2
         - name: Step two
-          uses: env | sort
+          run: env | sort
      jop2:
-        name: Second job
-        runs-on:  windows-latest
-        steps:
-        - name: Step one
-          uses: actions/checkout@v2
-        - name: Step two
-          run:  "Get-ChildItem Env: | Sort-Object Name"
+         name: Second job
+         runs-on:  windows-latest
+         steps:
+         - name: Step one
+           uses: actions/checkout@v2
+         - name: Step two
+           run:  "Get-ChildItem Env: | Sort-Object Name"
     
     
