--- a/.github/workflows/first.yaml
+++ b/.github/workflows/first.yaml
@@ -1,21 +1,19 @@
 name: first
 on: push
 jobs:
-    jop1:
+    jobl:
         name: First job
-        runs-on:  ubuntu-latest
+        runs-on: ubuntu-latest
         steps:
         - name: Step one
           uses: actions/checkout@v2
         - name: Step two
           run: env | sort
-     jop2:
-         name: Second job
-         runs-on:  windows-latest
-         steps:
-         - name: Step one
-           uses: actions/checkout@v2
-         - name: Step two
-           run:  "Get-ChildItem Env: | Sort-Object Name"
-    
-    
+    job2:
+        name: Second job
+        runs-on: windows-latest
+        steps:
+        - name: Step one
+          uses: actions/checkout@v2
+        - name: Step two
+          run: "Get-ChildItem Env: | Sort-Object Name"    
